--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body{
 }
 
 #script2 { 
-	background: url(http://www.bullshift.net/data/images/2013/10/theroadtobonneville-2560x1600.jpg) 50% 0 no-repeat fixed; 
+	background: url(http://www.parkinglotstripingga.com/parking%20lot%20striping%20letters%20emi.jpg) 50% 0 no-repeat fixed; 
 	height: 1000px;
 	margin: 0 auto; 
     width: 100%; 
@@ -184,6 +184,16 @@ body{
 
 #finalFeedback { 
 	background: url(http://www.bullshift.net/data/images/2013/10/theroadtobonneville-2560x1600.jpg) 50% 0 no-repeat fixed; 
+	height: 1000px;
+	margin: 0 auto; 
+    width: 100%; 
+    max-width: 1920px; 
+    position: relative; 
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+}
+
+#conclusion { 
+	background: url(http://60daymba.com/wp-content/uploads/2013/01/finish-line.jpg) 50% 0 no-repeat fixed; 
 	height: 1000px;
 	margin: 0 auto; 
     width: 100%; 
@@ -238,4 +248,8 @@ body{
 .scriptBack{
 	background-color:purple;
 	color:yellow;
+}
+
+.noBackground{
+	background-color:none;
 }
