--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
 }
 
 #brainstorm { 
-	background: url(http://www.brandonhall.com/blogs/wp-content/uploads/2013/09/classroom-1.jpg) 50% 0 no-repeat fixed; 
+	background: url(http://www.cisca.org/images/9Wood%20-%20UW%20Paccar%20Hall%20001.jpg) 50% 0 no-repeat fixed; 
 	margin: 0 auto; 
     width: 100%; 
     max-width: 1920px; 
@@ -54,7 +54,7 @@ body{
 }
 
 #sticky { 
-	background: url(http://simpledeveloper.com/wp-content/uploads/2013/06/sticky-note-using-html5-web-storage.jpg) 50% 0 no-repeat fixed; 
+	background: url(http://www.cisca.org/images/9Wood%20-%20UW%20Paccar%20Hall%20001.jpg) 50% 0 no-repeat fixed; 
 	height: 700px;
 	margin: 0 auto; 
     width: 100%; 
@@ -64,7 +64,7 @@ body{
 }
 
 #interviews { 
-	background: url(http://www.bullshift.net/data/images/2013/10/theroadtobonneville-2560x1600.jpg) 50% 0 no-repeat fixed; 
+	background: url(http://www.cisca.org/images/9Wood%20-%20UW%20Paccar%20Hall%20001.jpg) 50% 0 no-repeat fixed; 
 	height: 1000px;
 	margin: 0 auto; 
     width: 100%; 
